--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,27 @@ h2 {
 	font-family: 'Handlee', cursive;
 }
 
+.dogHouse {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	top: 1%;
+	right:5%;
+	transition: 1s all;
+}
+
+.dogHouse:hover {
+	transform: scale(2,2);
+}
+
 p {
 	font-family: 'Handlee', cursive; 
 }
 
 .logo {
-	position: absolute;
+  position: absolute;
   width: 300px;
   height: 80px;
-}
-
-header {
-	height: 80px;
 }
 
 nav {
@@ -32,8 +41,75 @@ nav li {
 	display: inline-block;
 	margin-left: 6%;
 	padding-top: 30px;
+	padding-bottom: 20px;
 	font-family: 'Handlee', cursive;
 }
+
+nav a {
+	color: #000;
+	transition: 1s all;
+}
+
+nav a:hover {
+	color: #1E90FF;
+
+}
+
+#navButton {
+	width: 40px;
+	height: 40px;
+	border-radius: 5%;
+	position: absolute;
+	top: 2%;
+	right: 12%;
+	display: none;
+}
+
+/*LIGHTBOX REGISTRATION*/
+
+.lightbox {
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.8);
+	z-index: 4;	
+	display: none;
+}
+
+.lightbox [ data-state = "visible"] {
+	display: block;
+}
+
+.lightbox-container {
+	position: absolute;
+	top: 12%;
+	left: 30%;
+	z-index: 5;
+}
+
+.lightbox-container img {
+  border-radius: 5%;
+}
+
+.register {
+	position: absolute;
+	top: 25%;
+	left: 22%;
+	z-index: 5;
+	width: 60%;
+}
+
+.x {
+	border-radius: 50%;
+	position: absolute;
+	top: 6%;
+	right: 22%;
+	cursor: pointer;
+}
+
+/*HOME PAGE */
 
 .main {
 	background-image: url(../img/background1.png);
@@ -60,16 +136,21 @@ nav li {
 	top: 12%;
 }
 
-.mainText h3 {
+.mainText h3, .mainText h4 {
 	float: left;
 	font-family: 'Handlee', cursive;
+}
+
+.mainText h3 {
+	color: #4876ff;
+	font-size: 2em;
 }
 
 .join {
 	position: absolute;
 	width: 24%;
 	left: 45%;
-	bottom: 30%;
+	bottom: 25%;
 }
 
 .join img {
@@ -137,11 +218,11 @@ nav li {
 }
 
 #name {
-  width: 160px;
+  width: 56%;
 }
 
 #password {
-	width: 169px;
+	width: 59%;
 }
 
 .mainDog {
@@ -162,14 +243,33 @@ nav li {
 	background-image: url(../img/background3.png);
 	background-size: cover;
 	background-attachment: fixed;
+	position: relative;
 	height: 840px;
+}
+
+.right {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  position: absolute;
+  top: 45%;
+  right: 10%;
+}
+
+.left {
+	width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  position: absolute;
+  top: 45%;
+  left: 10%;
 }
 
 .Profile {
 	background-color: rgba(230,230,250,.8);
 	box-shadow: 3px 3px 2px #545454;
 	border-radius: 5%;
-	width: 400px;
+	width: 30%;
 	height: 300px;
 	border: 1px solid #fff;
 	position: relative;
@@ -179,20 +279,31 @@ nav li {
 }
 
 .Profile img {
-	width: 200px;
+	width: 50%;
 	height: 210px;
 	float: left;
 	margin: 5%;
 	border-radius: 5%;
 }
 
-.eligibleBachelorette h2, .eligibleBachelors h2 {
+.Profile p {
+	margin: 25px 15px 0 20px;
+}
+
+.eligibleBachelorette h2, .eligibleBachelors h2, .events h2, .loveStory h2 {
 	width: 100%;
-	height: 4%;
+	height: 7%;
 	background-color: rgba(224,102,255,.6);
 	color: #fff;
 	text-align: center;
+	box-shadow: 3px 3px 2px #545454;
+	box-sizing: border-box;
 }
+
+.events h2 {
+	height: 9%;
+}
+
 /*BACHELORETTE PROFILE*/
 
 
@@ -201,16 +312,17 @@ nav li {
 	background-size: cover;
 	background-attachment: fixed;
 	height: 900px;
+	position: relative;
 }
 
 /*LOVE STORY*/
-
 
 
 .loveStory {
   background-image: url(../img/background4.png);
 	background-size: cover;
 	background-attachment: fixed;
+	position: relative;
 	height: 800px;	
 }
 
@@ -219,24 +331,239 @@ nav li {
 	border-radius: 5%;
 	box-shadow: 3px 3px 2px #545454;
 	width: 80%;
-	height: 750px;
+	height: 650px;
 	position: relative;
 	left: 10%;
 	top: 20px;
 }
 
+.lsWrapper p {
+	text-align: center;
+	padding-top: 5px;
+}
+
 .wedding1 {
   width: 66%;
   height: 400px;
+  border: 2px solid #fff;
+  box-shadow: 3px 3px 2px #545454;
   border-radius: 5%;
   position: relative;
   left: 17%;
-  top: 30px;
+  top: 10px;
+  z-index: 3;
 }
+
+.wedding2 {
+  position: absolute;
+	width: 25%;
+	left: 37%;
+	bottom: 6%;
+}
+
+.wedding2 img {
+  border-radius: 60%;
+	width: 50px;
+	height: 50px;
+	float: left;
+	margin: 2px;
+	transition: 1s all;
+}
+
+.wedding2 img:hover {
+	transform: scale(3,3);
+}
+
+/*UPCOMING EVENTS*/
 
 .events {
 	background-image: url(../img/background5.png);
 	background-size: cover;
 	background-attachment: fixed;
+	position: relative;
 	height: 700px;
 }
+
+.eWrapper {
+	background-color: rgba(230,230,250,.6);
+	border-radius: 5%;
+	box-shadow: 3px 3px 2px #545454;
+	width: 80%;
+	height: 550px;
+	position: relative;
+	left: 10%;
+	top: 20px;
+}
+
+.eimg {
+	width: 50%;
+	height: 80%;
+	position: absolute;
+	top: 10%;
+	left: 25%;
+}
+
+@media (max-width: 450px) {
+  #navButton {
+  	display: block;
+  }
+
+  #navButton:hover {
+  	cursor: pointer;
+  }
+  
+  nav li {
+  	display: block;
+  }
+
+  nav:nth-of-type(1) {
+    padding-top: 60px;
+  }
+  
+  .logo {
+    width: 250px;
+    height: 60px;
+  }
+
+  .mainWrapper {
+  	top: 10%;
+  	left: 2.2%;
+  	width: 95%;
+  	height: 70%;
+  }
+
+  .mainText {
+  	top: 5%;
+  	left: 50%;
+  }
+
+  .mainText h3 {
+  	font-size: 1.2em;
+  }
+  
+  /*SIGN IN FORM LIGHTBOX*/
+
+  .signInForm {
+  	width: 30%;
+  	height: 280px;
+  }
+
+  .signInForm button {
+    left: 30%;
+    top: 60%;
+  }
+
+  .fb, .instagram, .twitter {
+  	width: 20px;
+  	height: 20px;
+  }
+
+  .join {
+  	top: 75%;
+  	left: 34%;
+  	width: 80%;
+  }
+
+  .join img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .join p {
+  	text-align: left;
+  }
+
+ /* HOME PAGE IMAGES */
+
+  .mainDog {
+  	width: 150px;
+  	right: -5%;
+  	bottom: 0%;
+  }
+
+  .heart {
+  	width: 80px;
+  	bottom: 25%;
+  	right: 0;
+  }
+
+  /* BACHELOR'S AND BACHELORETTE'S SECTION*/
+
+
+  .eligibleBachelors, .eligibleBachelorette {
+  	height: 460px;
+  }
+  
+  .Profile {
+  	width: 75%;
+  	position: relative;
+  	left: 10%;
+  	top: 20px;
+  }
+  
+  .eligibleBachelors h2, .eligibleBachelorette h2 {
+  	height: 10%;
+  }
+
+  .next {
+  	display: none;
+  }
+  
+  .right, .left {
+    top: 85%;
+    width: 50px;
+    height: 50px;
+  }
+  
+  .right {
+  	right: 35%;
+  }
+
+  .left {
+  	left: 35%;
+  }
+
+/*LOVE STORY SECTION*/
+  
+  .lsWrapper {
+  	height: 500px;
+  	width: 90%;
+  	left: 5%;
+  }
+  
+  .wedding1 {
+  	left: 9%;
+  	width: 80%;
+  	height: 250px; 
+  }
+
+  .wedding2 {
+  	width: 80%;
+  	left: 15%;
+  }
+
+  .loveStory {
+  	height: 620px;
+  }
+
+ /* UPCOMING SECTION*/
+
+  .events {
+  	height: 600px;
+  }
+  .eWrapper {
+  	left: 5%;
+  	width: 90%;
+  	height: 500px;
+  }
+
+  .eimg {
+  	height: 330px;
+  	width: 80%;
+  	left: 10%;
+  }
+
+
+}
+
+
