--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,14 @@ nav li {
 	font-family: 'Handlee', cursive;
 }
 
-nav a {
+nav li a {
 	color: #000;
 	transition: 1s all;
+	text-decoration: none;
 }
 
 nav a:hover {
 	color: #1E90FF;
-
 }
 
 #navButton {
@@ -191,6 +191,7 @@ nav a:hover {
   position: absolute;
   bottom: 58%;
   right: 5%;
+  cursor: pointer;
 }
 
 .fb {
@@ -416,6 +417,10 @@ nav a:hover {
   	display: block;
   }
 
+  nav ul {
+  	display: none;
+  }  
+
   nav:nth-of-type(1) {
     padding-top: 60px;
   }
@@ -562,7 +567,6 @@ nav a:hover {
   	width: 80%;
   	left: 10%;
   }
-
 
 }
 
